# honeypy

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  release-please-config.json  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: pr-checks.yml  publish-to-pypi.yml  release-please.yml
honeypy/: __init__.py  honeypy.py
honeypy/bootstrap/: __init__.py  bootstrap.py
honeypy/data_graph/: __init__.py  honey_collection.py  honey_file.py  honey_file.pyi  honey_project.py  nd_collection.py  nd_file.py  nd_file.pyi  nd_project.py
honeypy/data_graph/adapters/: __init__.py  loadable_mixin.py
honeypy/data_graph/meta/: __init__.py  class_registry.py  honey_node.py  node_type.py  raw_metadata.py  virtual_node.py
honeypy/data_graph/stubs/: __init__.pyi
honeypy/metagraph/: __init__.py  honey_collection.py  honey_file.py  honey_file.pyi  honey_point.py  honey_project.py  nd_collection.py  nd_file.py  nd_file.pyi  nd_project.py
honeypy/metagraph/adapters/: loadable_mixin.py
honeypy/metagraph/meta/: __init__.py  honey_node.py  raw_metadata.py  virtual_node.py
honeypy/metagraph/stubs/: __init__.pyi  indexable_file.pyi  indexable_nd_file.pyi
honeypy/services/: __init__.py  context.py
honeypy/services/datagraph/: __init__.py  data_graph.py  node_factory.py
honeypy/transform/: __init__.py  pullback.py  pullback.pyi
honeypy/transform/meta/: __init__.py  honey_transform.py
src/: __init__.py  honeypy.py
tests/: conftest.py  test_honeypy.py  test_installation.py
tests/fixtures/: get_context.py  get_plugin.py  get_project.py
tests/integration/data_graph/: test_honey_collection.py  test_honey_file.py  test_honey_project.py  test_loadable_mixin.py  test_nd_file.py
tests/integration/hypergraph/: test_honey_collection.py  test_honey_file.py  test_nd_file.py
tests/integration/metagraph/: test_honey_collection.py  test_honey_file.py  test_honey_project.py  test_loadable_mixin.py  test_nd_file.py
tests/plugins/plugin_1/: README.md
tests/plugins/plugin_1/src/: array_file.py  array_file_collection.py  key_val_collection.py  key_val_file.py  key_val_project.py
tests/projects/project_1/: README.md
tests/projects/project_1/collection_1/: .metadata  1_1.csv  1_2.csv
tests/projects/project_1/collection_2/: .metadata  1_1.csv  1_2.csv
tests/projects/project_1/src/: key_val_collection.py  key_val_file.py  (+2 more)
tests/test_plugins/: __init__.py  minimal_plugin.py
tests/unit/data_graph/: test_data_graph.py
(+24 files in other folders)
