[project]
name = "honeypy"
version = "0.1.0"
description = "A lightweight, extensible framework managing research data, analyses and provenance"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[tool.poetry]
packages = [
    {include = "src"}
]


[tool.black]
line-length = 88
target-version = ["py313"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
