[project]
name = "honeypy"
version = "0.7.0"
description = "A lightweight, extensible framework managing research data, analyses and provenance"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.1,<9.0.0)"
]


[project.scripts]
honeypy = "honeypy.honeypy:run"


[tool.poetry]
packages = [
    {include = "honeypy"}
]


[tool.black]
line-length = 88
target-version = ["py313"]


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.pydocstyle]
convention = "numpy"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]
